[project]
name = "sol-wallets"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Full Name", email = "email@address.invalid" }
]
dependencies = [
    "solana>=0.34.0",
    "solders>=0.21.0",
    "simple-term-menu>=1.6.4",
    "orjson>=3.10.3",
    "mnemonic>=0.21",
    "bip-utils>=2.9.3",
    "base58>=2.1.1",
    "tqdm>=4.66.4",
    "requests>=2.32.2",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
"sol-wallets" = "sol_wallets:main"

[tool.rye.scripts]
dev = {cmd = 'nodemon -e py --exec rye run sol-wallets'}
ddev = {cmd = 'rye run sol-wallets'}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sol_wallets"]
